{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 122,
  "lineage": "247e3257-b0f9-0c41-652e-a48d15b0fa6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mintemir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:475775181858:loadbalancer/app/mintemir-lb/764dbcef56c6bc62",
            "arn_suffix": "app/mintemir-lb/764dbcef56c6bc62",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mintemir-lb-2101984650.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:475775181858:loadbalancer/app/mintemir-lb/764dbcef56c6bc62",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mintemir-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f7772e2781439475"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041ac8013e94edfbb"
              },
              {
                "subnet_id": "subnet-0606dbb43ed7d5f07"
              },
              {
                "subnet_id": "subnet-09f684986173b737c"
              }
            ],
            "subnets": [
              "subnet-041ac8013e94edfbb",
              "subnet-0606dbb43ed7d5f07",
              "subnet-09f684986173b737c"
            ],
            "vpc_id": "vpc-09ed5890ff0b4df0f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.r-security",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:475775181858:listener/app/mintemir-lb/764dbcef56c6bc62/5cac6e2b13d28e9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:475775181858:targetgroup/target/48a823c6c537dedc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:475775181858:listener/app/mintemir-lb/764dbcef56c6bc62/5cac6e2b13d28e9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:475775181858:loadbalancer/app/mintemir-lb/764dbcef56c6bc62",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mintemir",
            "aws_lb_target_group.target",
            "aws_security_group.r-security",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:475775181858:targetgroup/target/48a823c6c537dedc",
            "arn_suffix": "targetgroup/target/48a823c6c537dedc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:475775181858:targetgroup/target/48a823c6c537dedc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ed5890ff0b4df0f"
          },
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "r-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:475775181858:security-group/sg-0f7772e2781439475",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7772e2781439475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "r-security",
            "name_prefix": "",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed5890ff0b4df0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    }
  ]
}